tests/ui/parser/issues/issue-70552-ascription-in-parens-after-call.rs
fn main() {
    expr as fun()(:); //~ ERROR expected expression
}
